// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToken is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--small testClass1 testClass2"
  data-test-subj="test subject string"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color can be a custom hex 1`] = `
<span
  class="euiToken euiToken--circle euiToken--dark euiToken--small"
  style="background-color:#FF0000;color:#000000"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis0 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis1 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis1 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis2 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis2 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis3 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis3 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis4 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis4 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis5 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis5 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis6 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis6 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis7 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis7 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis8 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis8 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color euiColorVis9 is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis9 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props color gray is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props fill dark is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--dark euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props fill light is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props fill none is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenAlias is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis3 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenAnnotation is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis5 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenArray is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis7 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenBoolean is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis7 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenClass is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis1 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenConstant is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenDate is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis6 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenElement is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis3 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenEnum is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis3 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenEnumMember is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis7 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenEvent is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis4 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenException is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenField is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenFile is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--rectangle euiToken--dark euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenFunction is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis2 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenGeo is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis5 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenIP is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis9 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenInterface is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis9 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenKey is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis5 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenMethod is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis2 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenModule is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis4 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNamespace is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis1 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNested is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis2 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNull is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis2 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenNumber is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenObject is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis3 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenOperator is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis4 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenPackage is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenParameter is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis4 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenProperty is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis2 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenRange is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis4 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenRepo is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis1 euiToken--rectangle euiToken--dark euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenShape is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis8 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenString is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis1 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenStruct is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenSymbol is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis0 euiToken--rectangle euiToken--dark euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props iconType as EuiTokenMapType tokenVariable is rendered 1`] = `
<span
  class="euiToken euiToken--euiColorVis7 euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props shape circle is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props shape rectangle is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--rectangle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props shape square is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--square euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props size l is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--large"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--large euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props size m is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--medium"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props size s is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--small"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;

exports[`EuiToken props size xs is rendered 1`] = `
<span
  class="euiToken euiToken--gray euiToken--circle euiToken--light euiToken--xsmall"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--small euiIcon-isLoading"
    focusable="false"
    height="16"
    role="img"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</span>
`;
